--- a/calender.html
+++ b/calender.html
@@ -30,6 +30,7 @@
     </style>
 </head>
 <body>
+    <h3>My Personal Calendar</h3>
     <div class="calendar">
         <div class="day">S</div>
         <div class="day">M</div>
